--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     /* Estilo para el header */
     header {
       background-color: #4CAF50;
-      color: white;
+      color: rgb(12, 12, 12);
       padding: 20px;
       text-align: center;
     }
@@ -105,8 +105,8 @@
     .dose-options button {
       background-color: #4CAF50;
       color: white;
-      padding: 15px;
-      font-size: 18px;
+      padding: 10px;
+      font-size: 14px;
       border: none;
       margin-top: 10px;
       border-radius: 5px;
@@ -233,6 +233,14 @@
         <option value="TILCOMIX">TILCOMIX</option>
         <option value="TILOMIX 250">TILOMIX 250</option>
         <option value="TILVALOSINA">TILVALOSINA</option>
+        <option value="ESPELIN">ESPELIN</option>
+        <option value="DINAMIX 200">DINAMIX 200</option>
+        <option value="DINAMIX 800">DINAMIX 800</option>
+        <option value="DQCICLIN">DQCICLIN</option>
+        <option value="CLORDIAGRO">CLORDIAGRO</option>
+        <option value="LINCOX">LINCOX</option>
+        <option value="TRIMBAC">TRIMBAC</option>
+        <option value="NEOCYN">NEOCYN</option>
       </select>
     </div>
 
