--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     /* Estilo para el header */
     header {
       background-color: #4CAF50;
-      color: red !important; /* Forzar el color */
+      rgb(254, 254, 254) !important; /* Forzar el color */
       padding: 20px;
       text-align: center;
     }
